Connect parameter notifications for QNormalDiffuseAlphaMaterial

Added missing connects to init function

Task-number: QTBUG-50130
Change-Id: Ic1d60c3b5c9cfebdad04c4cbbdf4ad58e14dc36e
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>